--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,4 @@
-<h2>Movie List</h2>
-<movie></movie>
-<movie></movie>
+<h2>{{"Title: "+ getTtle()}}</h2>
+<div>{{movie.id}}</div>
+<div>{{movie.name}}</div>
 
