--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,17 @@
-<h2>{{"Title: "+ getTtle()}}</h2>
-<div>{{movie.id}}</div>
-<div>{{movie.name}}</div>
-
+<div class="card">
+  <div class="card-header">
+    {{ title }}
+  </div>
+  <ul class="list-group list-group-flush">
+    <li
+      *ngFor="let movie of movies"
+      class="list-group-item d-flex justify-content-between align-items-center"
+    >
+      <p>
+        <span class="badge bg-primary rounded-pill">{{ movie.id }}</span>
+        {{ movie.name }}
+      </p>
+     <button type="button" class="btn-close" aria-label="Close"></button>
+    </li>
+  </ul>
+</div>
