Lesson 6: Event Binding

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,3 +1,5 @@
+
+<movie-detail [movie]="selectedMovie"></movie-detail>
 <div class="card">
   <div class="card-header">
     {{ title }}
@@ -5,13 +7,15 @@
   <ul class="list-group list-group-flush">
     <li
       *ngFor="let movie of movies"
+      (click)="onSelect(movie)"
       class="list-group-item d-flex justify-content-between align-items-center"
-    >
+      [class.active]="movie===selectedMovie"
+      >
       <p>
         <span class="badge bg-primary rounded-pill">{{ movie.id }}</span>
         {{ movie.name }}
       </p>
-     <button type="button" class="btn-close" aria-label="Close"></button>
+      <button type="button" class="btn-close" aria-label="Close"></button>
     </li>
   </ul>
 </div>
