--- a/src/app/components/logging/logging.component.html
+++ b/src/app/components/logging/logging.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="loggingService.messages.length">
+<div class="card my-3" *ngIf="loggingService.messages.length">
   <div class="card-header">
     <h2 class="card-title">Messages</h2>
   </div>
