--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 <div class="card my-2" *ngFor="let movie of movies">
   <div class="row">
-    <div class="col-3">
-      <img src="assets/img/{{ movie.imageUrl }}" alt="assets/img/{{ movie.imageUrl }}" class="card-img" />
+    <div class="col-4">
+      <img src="assets/img/{{ movie.imageUrl }}" alt="assets/img/{{ movie.imageUrl }}" class="card-img img-fluid" />
     </div>
-    <div class="col-9">
+    <div class="col-8">
       <div class="card-body">
         <h5 class="card-title">
-          <a routerLink="/detail/{{movie.id}}"  >{{movie.name}}</a>
+          <a routerLink="/detail/{{movie.id}}" class="card-link" >{{movie.name}}</a>
         </h5>
         <p class="card-text">{{movie.description}}</p>
       </div>
