Lesson 15:Update Movie

--- a/src/app/components/movie-detail/movie-detail.component.html
+++ b/src/app/components/movie-detail/movie-detail.component.html
@@ -3,11 +3,22 @@
       <span class="badge bg-warning">
         id: {{movie.id}} name: {{movie.name}}
       </span>
-      <div class="input-group">
-        <input [(ngModel)]="movie.name" type="text" class="form-control">
-        <div class="input-group-append">
-          <button type="button" class="btn btn-outline-secondary">Update</button>
-        </div>
+
+      <div class="form-group">
+        <label for="name"></label>
+        <input type="text" [(ngModel)]="movie.name" class="form-control">
       </div>
+
+      <div class="form-group">
+        <label for="imageUrl"></label>
+        <input type="text" [(ngModel)]="movie.imageUrl" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label for="description"></label>
+        <textarea class="form-control" [(ngModel)]="movie.description"></textarea>
+      </div>
+    <button type="button" (click)="save()" class="btn btn-primary btn-sm my-2">Save Changes</button>
+
     </div>
   </div>
