--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card my-2">
   <div class="card-header">
     {{ title }}
   </div>
@@ -15,4 +15,29 @@
       <button type="button" class="btn-close" aria-label="Close"></button>
     </li>
   </ul>
+</div>
+
+<div class="card my-2">
+  <div class="card-header">
+    Add Movie
+  </div>
+  <div class="card-body">
+
+
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input #name class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="imageUrl">ImageUrl</label>
+    <input #imageUrl class="form-control">
+  </div>
+
+  <div class="form-group">
+    <label for="description">Description</label>
+    <textarea #description class="form-control" ></textarea>
+  </div>
+<button type="button" (click)="add(name.value,imageUrl.value,description.value);name.value='';imageUrl.value='';description.value='';" class="btn btn-primary btn-sm my-2">Save Changes</button>
+</div>
 </div>
